--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "migrate": "postgrator --config postgrator-config.js"
   },
   "keywords": [],
   "author": "",
@@ -18,12 +19,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "morgan": "^1.9.1"
+    "knex": "^0.21.0",
+    "morgan": "^1.9.1",
+    "pg": "^8.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.2",
+    "postgrator-cli": "^3.3.0",
     "supertest": "^4.0.2"
   }
 }
