--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.0",
     "morgan": "^1.9.1",
-    "pg": "^8.0.3"
+    "pg": "^8.2.1",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -29,5 +33,8 @@
     "nodemon": "^2.0.2",
     "postgrator-cli": "^3.3.0",
     "supertest": "^4.0.2"
+  },
+  "engines": {
+    "node": "10.15.0"
   }
 }
