--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.0",
+    "moment": "^2.26.0",
+    "moment-timezone": "^0.5.31",
     "morgan": "^1.9.1",
     "pg": "^8.2.1",
     "xss": "^1.0.6"
